# Pathway-to-Machine-Learning-Mastery

./: .buildinfo  README.md  Steps-to-Deploy-Jupyter-Book.md  genindex.html  intro.html  notebooks.html  objects.inv  pyproject.toml  search.html  searchindex.js
Pathway-to-Machine-Learning-Mastery-Book/: _config_default.yml  _config_old.yml  _toc.yml
Pathway-to-Machine-Learning-Mastery-Book/_build/.doctrees/: environment.pickle  intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree
Pathway-to-Machine-Learning-Mastery-Book/_build/.doctrees/content/: 01_Python_for_Machine_Learning.doctree  02_Data_Computations_with_NumPy.doctree  intro.doctree  preface.doctree
Pathway-to-Machine-Learning-Mastery-Book/_build/html/: .buildinfo  genindex.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  search.html  searchindex.js
Pathway-to-Machine-Learning-Mastery-Book/_build/html/content/: 01_Python_for_Machine_Learning.html  intro.html  preface.html
Pathway-to-Machine-Learning-Mastery-Book/_build/jupyter_execute/: markdown-notebooks.ipynb  notebooks.ipynb
Pathway-to-Machine-Learning-Mastery-Book/_build/jupyter_execute/content/: 01_Python_for_Machine_Learning.ipynb  02_Data_Computations_with_NumPy.ipynb
Pathway-to-Machine-Learning-Mastery-Book/content/: 02_Data_Computations_with_NumPy.ipynb  intro.md
_sources/content/: 01_Python_for_Machine_Learning.ipynb  intro.md
content/: 01_Python_for_Machine_Learning.html  02_Data_Computations_with_NumPy.html  intro.html  preface.html
(+3 files in other folders)
