[tool.poetry]
name = "pathway-to-machine-learning-mastery"
version = "0.1.0"
description = ""
authors = ["Ancil Cleetus <ancilcleetus.work@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter-book = "^1.0.3"
ipykernel = "^6.29.5"
ghp-import = "^2.1.0"
numpy = "^2.1.2"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
plotly = "^5.24.1"
rich = "^13.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
